--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaman Rehabilitation Center - Your Path to Recovery Starts Here</title>
-    <link rel="icon" type="image/png" href="images/Gaman Rehabilitation Center logo.png">
-    <link rel="shortcut icon" type="image/png" href="images/Gaman Rehabilitation Center logo.png">
+    <link rel="icon" type="png" href="images/Gaman Rehabilitation Center logo.png">
+    <link rel="shortcut icon" type="png" href="images/Gaman Rehabilitation Center logo.png">
     <link rel="apple-touch-icon" href="images/Gaman Rehabilitation Center logo.png">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="contact-styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
