--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaman Rehabilitation Center - Your Path to Recovery Starts Here</title>
-    <link rel="icon" type="png" href="images/Gaman Rehabilitation Center logo.png">
+    <!-- <link rel="icon" type="png" href="images/Gaman Rehabilitation Center logo.png"> -->
     <link rel="shortcut icon" type="png" href="images/Gaman Rehabilitation Center logo.png">
     <link rel="apple-touch-icon" href="images/Gaman Rehabilitation Center logo.png">
     <link rel="stylesheet" href="styles.css">
