--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard - Gaman Rehabilitation Center</title>
     <!-- Favicon for browser tab -->
-    <link rel="icon" href="images/Gaman Rehabilitation Center logo.png" type="image/png">
+    <!-- <link rel="icon" href="images/Gaman Rehabilitation Center logo.png" type="image/png"> -->
+    <link rel="icon" href="/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="images/Gaman Rehabilitation Center logo.png" type="image/png">
     <link rel="apple-touch-icon" href="images/Gaman Rehabilitation Center logo.png">
     <style>
