--- a/admin-setup.html
+++ b/admin-setup.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon for browser tab -->
-    <link rel="icon" href="images/Gaman Rehabilitation Center logo.png" type="image/png">
+    <!-- <link rel="icon" href="images/Gaman Rehabilitation Center logo.png" type="image/png"> -->
+    <link rel="icon" href="/favicon.png" type="image/x-icon">
     <link rel="shortcut icon" href="images/Gaman Rehabilitation Center logo.png" type="image/png">
     <link rel="apple-touch-icon" href="images/Gaman Rehabilitation Center logo.png">
     <title>Admin Setup - Gaman Rehabilitation Center</title>
